使用配置文件添加node

--- a/conf/family_graph.ini
+++ b/conf/family_graph.ini
@@ -20,6 +20,7 @@ daughter_rel=SELECT DISTINCT(gmsfhm),xm,fq_xm as parent_xm,fq_gmsfhm as parent_g
 son_rel=SELECT DISTINCT(gmsfhm),xm,fq_xm as parent_xm,fq_gmsfhm as parent_gmsfhm FROM renyuanjibenxinxi.czrkjbxx WHERE fq_xm!='' and xb='男' UNION SELECT DISTINCT(gmsfhm),xm,mq_xm as parent_xm,mq_gmsfhm as parent_gmsfhm FROM renyuanjibenxinxi.czrkjbxx WHERE fq_xm!='' and xb='男'
 
 [cql]
+person=MERGE (n:Person{{身份证号:\"{0}\"}}) on create set n.身份证号=\"{0}\",n.姓名=\"{1}\",n.性别=\"{2}\",n.户号=\"{3}\",n.户籍地址=\"{4}\",n.户主身份证号=\"{5}\",n.户主姓名=\"{6}\"$result[0],result[1],result[2],result[3],result[4],result[5],result[6]
 husband_rel=MATCH (p:Person),(q:Person) WHERE p.身份证号=\"{0}\" AND q.身份证号=\"{1}\" MERGE (p)-[r:丈夫]->(q)$result[3],result[0]
 wife_rel=MATCH (p:Person),(q:Person) WHERE p.身份证号=\"{0}\" AND q.身份证号=\"{1}\" MERGE (p)-[r:妻子]->(q)$result[3],result[0]
 father_rel=MATCH (p:Person),(q:Person) WHERE p.身份证号=\"{0}\" AND q.身份证号=\"{1}\" MERGE (p)-[r:父亲]->(q)$result[0],result[3]
