--- a/conf/event_graph.ini
+++ b/conf/event_graph.ini
@@ -5,7 +5,7 @@ database=chentao
 user=gpadmin
 passwd=gpadmin
 
-[event_graph]
+[graph]
 url=http://192.168.108.189:7474
 user=neo4j
 password=passwd
@@ -17,7 +17,7 @@ tongzhu=SELECT sfhm,gxrsfhm FROM social_event_graph.tongfangxinxi
 tongxing=SELECT sfhm,gxrsfhm FROM social_event_graph.tongxingxinxi
 
 [cql]
-person=MERGE (n:Person{{身份证号:\"{1}\"}}) on create set n.姓名=\"{0}\",n.身份证号=\"{1}\",n.性别=\"{2}\",n.电话号码=\"{3}\"$result[0],result[1],result[2],result[3]
-tonghua=MATCH (p:Person),(q:Person) WHERE p.电话号码=\"{0}\" AND q.电话号码=\"{1}\" MERGE (p)-[r:通话]->(q)$result[0],result[1]
-tongzhu=MATCH (p:Person),(q:Person) WHERE p.身份证号=\"{0}\" AND q.身份证号=\"{1}\" MERGE (p)-[r:同住]->(q)$result[0],result[1]
-tongxing=MATCH (p:Person),(q:Person) WHERE p.身份证号=\"{0}\" AND q.身份证号=\"{1}\" MERGE (p)-[r:同行]->(q)$result[0],result[1]
+person=MERGE (n:Person{{身份证号:$1}}) on create set n.姓名=$0,n.身份证号=$1,n.性别=$2,n.电话号码=$3|(0,1,2,3)
+tonghua=MATCH (p:Person),(q:Person) WHERE p.电话号码=$0 AND q.电话号码=$1 MERGE (p)-[r:通话]->(q)|(0,1)
+tongzhu=MATCH (p:Person),(q:Person) WHERE p.身份证号=$0 AND q.身份证号=$1 MERGE (p)-[r:同住]->(q)|(0,1)
+tongxing=MATCH (p:Person),(q:Person) WHERE p.身份证号=$0 AND q.身份证号=$1 MERGE (p)-[r:同行]->(q)|(0,1)
