--- a/conf/event_graph.ini
+++ b/conf/event_graph.ini
@@ -10,7 +10,7 @@ url=http://192.168.108.189:7474
 user=neo4j
 password=passwd
 
-[sql]
+[cypher]
 person=select xm,gmsfhm,xb,phone_number from social_event_graph.person
 tonghua=SELECT zjhm,bjhm FROM social_event_graph.tonghuaxinxi
 tongzhu=SELECT sfhm,gxrsfhm FROM social_event_graph.tongfangxinxi
