--- a/conf/family_graph.ini
+++ b/conf/family_graph.ini
@@ -19,7 +19,7 @@ mother_rel=SELECT DISTINCT(gmsfhm),xm,mq_xm,mq_gmsfhm FROM renyuanjibenxinxi.czr
 daughter_rel=SELECT DISTINCT(gmsfhm),xm,fq_xm as parent_xm,fq_gmsfhm as parent_gmsfhm FROM renyuanjibenxinxi.czrkjbxx WHERE fq_xm!='' and xb='女' UNION SELECT DISTINCT(gmsfhm),xm,mq_xm as parent_xm,mq_gmsfhm as parent_gmsfhm FROM renyuanjibenxinxi.czrkjbxx WHERE fq_xm!='' and xb='女'
 son_rel=SELECT DISTINCT(gmsfhm),xm,fq_xm as parent_xm,fq_gmsfhm as parent_gmsfhm FROM renyuanjibenxinxi.czrkjbxx WHERE fq_xm!='' and xb='男' UNION SELECT DISTINCT(gmsfhm),xm,mq_xm as parent_xm,mq_gmsfhm as parent_gmsfhm FROM renyuanjibenxinxi.czrkjbxx WHERE fq_xm!='' and xb='男'
 
-[cql]
+[cypher]
 person=MERGE (n:Person{身份证号:$0}) on create set n.身份证号=$0,n.姓名=$1,n.性别=$2,n.户号=$3,n.户籍地址=$4,n.户主身份证号=$5,n.户主姓名=$6|(0,1,2,3,4,5,6)
 husband_rel=MATCH (p:Person),(q:Person) WHERE p.身份证号=$0 AND q.身份证号=$1 MERGE (p)-[r:丈夫]->(q)|(3,0)
 wife_rel=MATCH (p:Person),(q:Person) WHERE p.身份证号=$0 AND q.身份证号=$1 MERGE (p)-[r:妻子]->(q)|(3,0)
